# nightmare

./: .gitignore  CMakeLists.txt  LICENSE  README.md  fog2png.py  fog3format.txt  levelformat.txt  sp.sublime-project  test.py  test2.py  test3.py  test4.py  test5.py  yasl.txt
cmake/: FindFreeImage.cmake  FindWayland.cmake  FindXCB.cmake
doc/: Doxyfile
game/: rscdata.json
game/glsl/: glsl.h
game/glsl/image/: fragment.glsl  vertex.glsl
game/src/: CMakeLists.txt  main.c
include/: Game.h  NArgs.h  NCompat.h  NCrypt.h  NDFF.h  NDynamic_t.h  NEngine.h  NEntity.h  NFog.h  NGL.h  NGlobals.h  NIFF.h  NImage.h  NLevel.h  NLog.h  NOSAPI.h  NPorting.h  NPos.h  NRect.h  NRsc.h  NShader.h  NShadow.h  NSplu.h  NSprite.h  NSpritesheet.h  NSquare.h  NTypes.h  NUtil.h  NVecMath.h  NVecTypes.h  NWMan.h  Nightmare.h
include/wrap/: gl.h  limits.h
include2/: Nightmare.h
rsc/glsl/image/: fragment.glsl  vertex.glsl
src/: CMakeLists.txt  Game.h  NArgs.c  NCompat.h  NDynamic_t.h  NEngine.c  NEngine.h  NEntity.c  NEntity.h  NGlobals.c  NGlobals.h  NIFF.c  NImage.c  NImage.h  NLevel.c  NLevel.h  NLog.c  NLog.h  NOSAPI.c  NObject.h  NPorting.c  NPorting.h  NPos.h  NRect.h  NRsc.c  NRsc.h  NRsc_misc.c  NShader.c  NShader.h  NShadow.c  NShadow.h  NSplu.c  NSplu.h  NSprite.c  NSprite.h  NSprite3D.h  NSpritesheet.c  NSpritesheet.h  NSquare.c  NSquare.h  (+42 more)
src/Core/: CMakeLists.txt  NDFF.c  NGlobals.c  NIFF.c  NLog.c  NRsc.c  NVecMath.c
src/NGL/: CMakeLists.txt  common.c  common.h
src/NGL/OGL/: OGL.c
src/NOSAPI/: CMakeLists.txt  linux.c  windows.c
src/WMan/: CMakeLists.txt  SDL.c  SDL.h  SDL2.c  SDL2.h  W32.c  W32.h  WL.c  WL.h  X11.c  X11.h  common.c  common.h  event.c  event.h
src/WMan/wayland/: common.c  common.h  keyboard.c  pointer.c  registry.c  seat.c  window.c  xdg-shell.c  xdg-surface.c
src/wm/: sdl.c  sdl.h  sdl2.c  sdl2.h
src/wrap/: gl.h  limits.h  windows.h
src/yasl/: yasl.c  yasl.h  yutil.h
tools/: CMakeLists.txt  NKTool.h  license.sh  main.c
tools/databuilder/: CMakeLists.txt  main.c  test.json  tool.c
tools/fogbuilder/: CMakeLists.txt  main.c  main_diamond.c  tool.c
tools/level_layer_export/: build.sh  main.c
tools/ngloptbuilder/: CMakeLists.txt  tool.c
tools/niffconv/: CMakeLists.txt  tool.c
tools/niffflip/: CMakeLists.txt  tool.c
tools/vecmathbuilder/: CMakeLists.txt  tool.c
